--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "php": ">=5.4.0",
         "yiisoft/yii2": ">=2.0.5",
         "yiisoft/yii2-bootstrap": "*",
-        "yiisoft/yii2-swiftmailer": "*"
+        "yiisoft/yii2-swiftmailer": "*",
+        "fxp/composer-asset-plugin": "^1.1",
+        "ext-intl": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
