--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,8 @@
     },
     "minimum-stability": "stable",
     "require": {
-        "php": ">=5.4.0",
+        "php": "5.6.18",
         "yiisoft/yii2": ">=2.0.5",
-        "yiisoft/yii2-gii": "*",
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
         "fxp/composer-asset-plugin": "^1.1",
